# hass-edge-tts

./: .gitignore  .ruff.toml  NOTICE.md  README.md  README.zh-Hans.md  hacs.json  pyproject.toml
.github/workflows/: release.yaml  validate.yaml
custom_components/edge_tts/: __init__.py  config_flow.py  const.py  intent.py  manifest.json  services.yaml  tts.py  voices.py
custom_components/edge_tts/translations/: en.json  zh-Hans.json
scripts/: refresh_voices.py
tests/: __init__.py  conftest.py  test_config_flow.py  test_const.py  test_services.py  test_tts.py  test_voices.py
