[project]
name = "hass-edge-tts"
version = "0.8.0"
description = "Microsoft Edge TTS for Home Assistant (maintained fork)"
readme = "README.md"
requires-python = ">=3.14.2,<3.15"
dependencies = []

[tool.uv]
package = false

[dependency-groups]
dev = [
    "edge-tts>=7.2.0",
    "ha-ffmpeg==3.2.2",
    "homeassistant==2026.6.3",
    "mutagen==1.47.0",
    "pytest-homeassistant-custom-component==0.13.339",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
